# claude-switcher

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  install.sh  package.json
.githooks/: post-commit
extensions/pi-claude-switcher/: README.md  index.ts  package-lock.json  package.json
extensions/pi-claude-switcher/test/: layout-check.mjs
extensions/pi-session-sync/: package.json  session-sync.sh
extensions/pi-session-sync/test/: engine-check.sh
pi-extension/: README.md  index.ts  package-lock.json  package.json
pi-session-sync/: README.md  index.ts  package-lock.json  package.json  session-sync.sh
pi-session-sync/test/: engine-check.sh
scripts/: claude-active  claude-switcher-exec  slim
src/: cli.rs  commands.rs  detect.rs  doctor.rs  error.rs  main.rs  manager.rs  metadata.rs  paths.rs  profile.rs  symlink.rs  usage.rs
src/tui/: app.rs  mod.rs  ui.rs
switcher/: Cargo.toml  Makefile  build.rs
switcher/src/: cli.rs  commands.rs  main.rs  manager.rs  profile.rs  symlink.rs  usage.rs
switcher/src/tui/: app.rs  mod.rs  ui.rs
tests/: cli.rs
