[package]
name = "claude-switcher"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
description = "Switch between multiple isolated Claude Code accounts using a single atomic symlink."
authors = ["Paul Yun <paul.a.yun@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/PVUL/claude-switcher"
keywords = ["claude", "cli", "profile", "tui", "symlink"]
categories = ["command-line-utilities"]

[[bin]]
name = "claude-switcher"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde", "clock"] }
anyhow = "1.0"
thiserror = "2.0"

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = true
opt-level = "z"
